--- a/src/lib/styles/_typography.scss
+++ b/src/lib/styles/_typography.scss
@@ -13,6 +13,8 @@ $max-viewport: 1240px;
   line-height: 1.1;
   font-weight: 700;
   margin-bottom: 0.5em;
+  text-wrap: balance;
+  color: var(--color-accent);
 }
 
 @mixin heading-2 {
@@ -20,6 +22,8 @@ $max-viewport: 1240px;
   line-height: 1.2;
   font-weight: 700;
   margin-bottom: 0.5em;
+  text-wrap: balance;
+  color: var(--color-accent);
 }
 
 @mixin heading-3 {
@@ -27,6 +31,8 @@ $max-viewport: 1240px;
   line-height: 1.3;
   font-weight: 600;
   margin-bottom: 0.5em;
+  text-wrap: balance;
+  color: var(--color-accent);
 }
 
 @mixin heading-4 {
@@ -34,6 +40,8 @@ $max-viewport: 1240px;
   line-height: 1.4;
   font-weight: 600;
   margin-bottom: 0.5em;
+  text-wrap: balance;
+  color: var(--color-accent);
 }
 
 @mixin body-large {
