--- a/src/app.scss
+++ b/src/app.scss
@@ -33,9 +33,9 @@ body {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-image: linear-gradient(rgba(30, 100, 200, 0.075) 1px, transparent 1px),
-  linear-gradient(90deg, rgba(30, 100, 200, 0.05) 1px, transparent 1px) !important;
-  background-size: 40px 40px !important;
+  background-image: linear-gradient(var(--parallax-background-color) 1px, transparent 1px),
+  linear-gradient(90deg, var(--parallax-background-color) 1px, transparent 1px);
+  background-size: 40px 40px;
   will-change: transform;
 }
 
