--- a/src/app.scss
+++ b/src/app.scss
@@ -56,6 +56,10 @@ h4 {
   @include typography.heading-4;
 }
 
+h5 {
+  @include typography.heading-5;
+}
+
 p {
   margin-bottom: var(--space-s);
 }
